# website_for_ordering_pizza

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/end_points/: auth.py
app/core/: auth.py  config.py  security.py
app/db/: database.py  session.py
app/models/: __init__.py  categories.py  products.py  users.py
app/repositories/: users.py
app/schemas/: auth.py  users.py
app/services/: users.py
migrations/: env.py
migrations/versions/: 937a4da77265_initial_migration.py  b50220d4d48e_initial_migration.py
