[project]
name = "website-for-ordering-pizza"
version = "0.1.0"
description = ""
authors = [
    {name = "korzat",email = "muhailishe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "authx (>=1.4.3,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)"
]


[tool.poetry]
package-mode = false  # <--- КЛЮЧЕВОЕ ИСПРАВЛЕНИЕ ДЛЯ POETRY 2.0+


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
